update: 优化交易信息呈现

--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
                                 <a href="https://solscan.io/tx/${tx.tx_hash}" 
                                    target="_blank" 
                                    class="transaction-hash">
-                                    ${tx.tx_hash}
+                                   查看交易详情
                                 </a>
                             </div>
                             <div class="transaction-description">
